--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@ layout: blog
 title: Home
 ---
 
-<h1>Benvenuti su LAB.TP.IT</h1>
+<h1>Benvenuti su 🧬 LAB.TP.IT</h1>
 
-<p>🧬 Laboratorio indipendente di ricerca scientifica per la provincia di Trapani</p>
+<p>Laboratorio indipendente di ricerca scientifica per la provincia di Trapani</p>
 
 <h2>Progetti in corso</h2>
 
 <ul>
-  <li><strong>Javanile</strong> - Community di sviluppo software open source [(🔗)](https://javanile.org)</li>
+  <li><strong>Javanile</strong> - Community di sviluppo software open source <a href="https://javanile.org" target="_blank">(🔗)</a></li>
 </ul>
