--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@ title: Home
 <h2>Progetti in corso</h2>
 
 <ul>
-  <li><strong>Javanile</strong> - Community di sviluppo software open source <a href="https://javanile.org" target="_blank">(🔗)</a></li>
+  <li><strong>Javanile</strong> - Community di sviluppo software open source <a href="https://javanile.org" target="_blank">🔗</a></li>
 </ul>
