--- a/index.html
+++ b/index.html
@@ -12,3 +12,10 @@ title: Home
 <ul>
   <li><strong>Javanile</strong> - Community di sviluppo software open source <a href="https://javanile.org" target="_blank">🔗</a></li>
 </ul>
+
+<h2>Chi siamo</h2>
+
+<ul>
+  <li><strong>Dott. Ing. Francesco Bianco</strong> - Fondatore e direttore scientifico <a href="https://www.linkedin.com/in/yafb/" target="_blank">🔗</a></li>
+</ul>
+  
