--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: blog
 title: Home
 ---
 
-<h1>Benvenuti su 🧬 LAB.TP.IT</h1>
+<h1>Benvenuti su <a href="https://lab.tp.it">lab.tp.it</a></h1>
 
-<p>Laboratorio indipendente di ricerca scientifica per la provincia di Trapani</p>
+<p>Laboratorio di ricerca scientifica indipendente per la provincia di Trapani</p>
 
 <h2>Progetti in corso</h2>
 
@@ -18,4 +18,3 @@ title: Home
 <ul>
   <li><strong>Dott. Ing. Francesco Bianco</strong> - Fondatore e direttore scientifico <a href="https://www.linkedin.com/in/yafb/" target="_blank">🔗</a></li>
 </ul>
-  
